--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "@vercel/postgres": "^0.8.0",
     "next": "14.2.3",
     "react": "^18",
